--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,12 @@
   padding:0;
   box-sizing:border-box;
 }
+.center{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  width:100%;
+  height:100vh;
+  font-size:1.3rem;
+  font-weight:700;
+}
